# mamba-re-trained

./: .gitignore  PRODUCTION_TRAINING.md  QUICKSTART.md  README.md  TRAINING_LOCAL.md  count_sentences.py  debug_train.py  pyproject.toml
configs/: mamba_130m.yaml  mamba_130m_local_production.yaml  test_small.yaml
output/: config.yaml  training_metrics.csv
scripts/: create_test_data.py  evaluate.py  generate.py  setup.sh  train.sh  train_local.sh  train_production.sh
src/: __init__.py  config.py  data.py  data_local.py  model.py  train.py  train_local.py
